--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 
   <section id="about">
     <h2>About Me</h2>
-    <p>আমি একজন আগ্রহী শিক্ষার্থী এবং ফ্রন্টএন্ড ওয়েব ডেভেলপমেন্ট শিখছি। আমি HTML, CSS এবং JavaScript নিয়ে কাজ করছি। আমার স্বপ্ন একজন দক্ষ সফটওয়্যার ইঞ্জিনিয়ার হওয়া।</p>
+    <p>আমি একজন আগ্রহী শিক্ষার্থী এবং ফ্রন্টএন্ড ওয়েব ডেভেলপমেন্ট শিখছি। আমি HTML, CSS এবং JavaScript নিয়ে কাজ করছি। আমি শিখতে চাই......।</p>
   </section>
 
   <section id="projects">
@@ -168,11 +168,11 @@
     <div class="projects">
       <div class="card">
         <h3>Google Clone</h3>
-        <p>HTML, CSS এবং API দিয়ে বানানো রিয়েল সার্চ ইঞ্জিন ক্লোন।</p>
+        <p>HTML, CSS এবং API দিয়ে website creat, personal portpolio </p>
       </div>
       <div class="card">
         <h3>Heart Animation</h3>
-        <p>CSS দিয়ে তৈরি সুন্দর এনিমেটেড হার্ট ক্লিক করলে fireworks।</p>
+        <p>html দিয়ে animation তৈরি করে , সুন্দর এনিমেটেড হার্ট ক্লিক করলে fireworks।</p>
       </div>
     </div>
   </section>
@@ -198,12 +198,13 @@
       <input type="text" placeholder="আপনার নাম..." required>
       <input type="email" placeholder="আপনার ইমেইল..@" required>
       <textarea rows="4" placeholder="আপনার বার্তা..." required></textarea>
-      <button type="submit">পাঠান</button>
+      <button type="submit">submit</button>
     </form>
   </section>
 
   <footer>
-    <p>&copy; 2025 রিফাত. সকল স্বত্ব সংরক্ষিত।</p>
+    <p><i>&copy; 2025 রিফাত. সকল স্বত্ব সংরক্ষিত।</i>  <br>
+    Edited By Rif@t </p>
   </footer>
 
 </body>
